# _study

./: .gitignore  CMakeLists.txt  README.md  async.cpp  async.h  command.hpp  command_obervers.hpp  command_processor.hpp  cust_alloc.hpp  cust_classic_alloc.hpp  cust_container.hpp  cust_container_with_classic_alloc.hpp  data.db  dir_finder.hpp  editor.cpp  editor.hpp  file.cpp  file.hpp  file_visitor.hpp  file_wrapper.hpp  hashes.hpp  import_from_drunk_format.hpp  lib.h  main.cpp  matr.hpp  print_to_drunk_format.hpp  test_version.cpp
.github/workflows/: release.yml
data/: ip_filter_short.tsv
example_data/: world.txt  world_other.txt
graphic_objects/: circle.hpp  graphic_objects_base.hpp
include/pdc/: command.hpp  consumer.hpp  data_queue.hpp  distributor.hpp  observer.hpp  producer.hpp  subject.hpp
test/: CMakeLists.txt  test_1.cpp
